Update to Ignition 8.0 / Java 11